<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="app_name">Matrix client</string>
 <string name="screenshot">Screenshot</string>
 <string name="settings">Settings</string>
 <string name="logout">Log out</string>
 <string name="exit">Exit</string>
 <string name="drawer_close">close drawer</string>
 <string name="drawer_open">open drawer</string>
 <string name="user_list">Users</string>
 <string name="join_room">Join room</string>
 <string name="invite_user">Invite user</string>
</resources>

